cmake_minimum_required(VERSION 3.24)
project(Gra)

set(CMAKE_CXX_STANDARD 14)

add_executable(Gra main.cpp organizm.cpp organizm.h ustawienia.h generatorlosowy.cpp generatorlosowy.h sasiedztwo.cpp sasiedztwo.h sasiedztwo.cpp mieszkaniec.cpp mieszkaniec.h osobniki.cpp osobniki.h nisza.cpp nisza.h srodowisko.cpp srodowisko.h)
